# BilibiliPlayer

./: .gitignore  CMakeLists.txt  LICENSE  PR_SUMMARY_001-unified-stream-player.md  README.md  bilibili.py  conanfile.py  conanfile.txt  log.properties  profile_asan
demo/: CMakeLists.txt
demo/src/: bili_network_interface.cpp  bili_network_interface.h  circular_buffer.hpp  ffmpeg_decoder.cpp  http_demo.cpp  streaming_audio_buffer.cpp  streaming_audio_buffer.h  wasapi_audio_player.cpp  wasapi_audio_player.h
demo/src/util/: circular_buffer.hpp
demo/test/: bilibili_interface_test.cpp  bilibli_stream_test.cpp  simple_wav_test.cpp  test_filepath_generation.cpp
docs/: PHASE_3_IMPLEMENTATION.md  PHASE_4_COMPLETION.md  PHASE_4_PLAN.md  PHASE_5_COMPLETION.md  PHASE_5_PLAN.md  PHASE_5_PROGRESS.md  localization-guide.md  ui.md
resource/: translations.qrc
resource/lang/: README.md  en_US.ts  zh_CN.ts
resource/themes/: README.md  ocean_blue.json
specs/: COVERAGE_README.md
specs/001-unified-stream-player/: data-model.md  quickstart.md  research.md  spec.md  tasks.md  tasks_clarified.md
specs/001-unified-stream-player/checklists/: action-plan.md  comprehensive.md  network.md  phase6.md  requirements-quality.md  requirements.md  unit-tests-for-requirements-2025-11-15.md
specs/001-unified-stream-player/clarifications/: 2025-11-15.md
specs/001-unified-stream-player/contracts/: audio-source.md  playback.md  playlist.md
specs/002-unit-test-coverage/: plan.md  spec.md  tasks.md
specs/003-deadlock-and-local-media/: IMPLEMENTATION_SESSION_2.md  T020_T021_TEST_VERIFICATION.md  T022_T024_T025_DIAGNOSTICS_SUMMARY.md  T028_FINAL_VALIDATION_REPORT.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-deadlock-and-local-media/outputs/: emit-locks-triage.csv  emit-locks.csv  i18n-scan.csv  lock-block.csv
specs/003-deadlock-and-local-media/scripts/: run-emits-scan.ps1  run-emits-triage.ps1  run-scans.ps1
specs/004-ui-fixes-localization/: data-model.md  phase-3b-async-search.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-ui-fixes-localization/audits/: hardcoded-strings.json
specs/004-ui-fixes-localization/checklists/: requirements.md
specs/004-ui-fixes-localization/contracts/: localization-contract.md  platform-metadata-contract.md  playlist-navigation-contract.md  search-async-contract.md
specs/005-search-result-cache/: spec.md
specs/005-search-result-cache/checklists/: requirements.md
src/: CMakeLists.txt  main.cpp
src/audio/: audio_event_processor.cpp  audio_event_processor.h  audio_frame.h  audio_player_controller.cpp  audio_player_controller.h  audio_player_controller_callback.cpp  ffmpeg_decoder.cpp  ffmpeg_decoder.h  ffmpeg_log.cpp  ffmpeg_log.h  ffmpeg_probe.cpp  ffmpeg_probe.h  taglib_cover.cpp  taglib_cover.h  wasapi_audio_output.cpp  wasapi_audio_output.h
src/config/: config_manager.cpp  config_manager.h
src/event/: event_bus.hpp
src/file/: file_manager.h
src/log/: log_manager.cpp  log_manager.h
src/manager/: application_context.cpp  application_context.h
src/network/: bili_network_interface.cpp  bili_network_interface.h  i_network_platform_interface.h  network_manager.cpp  network_manager.h  search_service.h
src/network/platform/: bili_network_interface.cpp  bili_network_interface.h  i_platform.h
src/playlist/: playlist.h  playlist_manager.cpp  playlist_manager.h
src/stream/: realtime_pipe.cpp  realtime_pipe.hpp  streaming_audio_buffer.cpp  streaming_audio_buffer.h
src/ui/: custom_title_bar.cpp  custom_title_bar.h  custom_title_bar.ui  customtitlebar.cpp  customtitlebar.h  customtitlebar.ui  main_window.cpp  main_window.h  main_window.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  menu_widget.cpp  menu_widget.h  menu_widget.ui  menuwidget.cpp  menuwidget.h  menuwidget.ui  player_status_bar.cpp  player_status_bar.h  player_status_bar.ui
src/ui/navigator/: i_navigable_page.h  navigator.cpp  navigator.h
src/ui/page/: playlist_page.cpp  playlist_page.h  playlist_page.ui  search_loading_widget.cpp  search_page.cpp  search_page.h  search_page.ui  settings_page.cpp  settings_page.h  settings_page.ui
src/ui/theme/: theme_manager.cpp  theme_manager.h
src/ui/util/: elided_label.cpp  elided_label.h
src/util/: checked_mutex.h  circular_buffer.hpp  cover_cache.cpp  cover_cache.h  md5.cpp  md5.h  safe_queue.hpp  thread_annotations.h  urlencode.cpp  urlencode.h
test/: CMakeLists.txt  bili_network_interface_test.cpp  catch2_listener.cpp  circular_buffer_test.cpp  config_manager_test.cpp  event_bus_test.cpp  fake_network_producer_test.cpp  ffmpeg_decoder_test.cpp  ffmpeg_decoder_wav_test.cpp  ffmpeg_probe_metadata_test.cpp  i18n_test.cpp  playlist_local_add_test.cpp  playlist_local_cover_test.cpp  playlist_local_duration_test.cpp  playlist_manager_test.cpp  playlist_navigation_test.cpp  playlist_test.cpp  realtime_pipe_test.cpp  safe_queue_test.cpp  search_async_test.cpp  streaming_buffer_test.cpp  streaming_cancellation_test.cpp  streaming_integration_test.cpp  test_cookie_jar.cpp  test_http_pool.cpp  test_streaming_inputstream_shutdown.cpp  test_utils.h  theme_manager_test.cpp  ui_components_test.cpp
test/data/: README.md  silence.wav.hex
test/data/audio/: Bruno_opus.webm
test/data/json/: CMakeLists.txt  extra_fields_theme.json  malformed_theme.json  missing_fields_theme.json  valid_theme.json
test/diagnostics/: sine_wave_playback_test.cpp
test/util/: audio_generator.cpp  audio_generator.h
tools/bench/: README.md  startup_measure.ps1
tools/diagnostics/: local-audio-reproducer.ps1
